ficed cut border on iPhone bug

--- a/themes/ghostwriter/static/styles/style.scss
+++ b/themes/ghostwriter/static/styles/style.scss
@@ -727,8 +727,7 @@ p.caption {
     .post-container,
     .post-list,
     .author-profile {
-        margin-right: 25px;
-        margin-left: 25px;
+        margin: 0 auto;
     }
 
     .post-tags { width: 100%; }
@@ -803,8 +802,7 @@ p.caption {
     .post-container,
     .post-list,
     .author-profile {
-        margin-right: 15px;
-        margin-left: 15px;
+        margin: 0 auto;
     }
 
     .author-avatar {
